# facebook-page-poster

./: .gitignore  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  styles.css
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  facebook.rs  main.rs  scheduler.rs
src/components/: ConfirmDialog.tsx
src/lib/: mock.ts  tauri.ts  types.ts
src/pages/: BatchPage.tsx  DashboardPage.tsx  NewPostPage.tsx  QueuePage.tsx  SettingsPage.tsx
